# cursor-mem0

./: .env.example  .gitignore  .mcp.json  CHANGELOG.md  LICENSE  PUBLISHING.md  README.md  README.zh-CN.md  mcp.json  pyproject.toml
.cursor-plugin/: plugin.json
.cursor/rules/: public-documentation.mdc
.github/: topics.txt
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: publish.yml  test.yml
cursor_mem/: __init__.py  _register.py  config.py  mcp_server.py  memory.py
cursor_mem/configs/llms/: cursor.py
cursor_mem/llms/: __init__.py  cursor.py
docs/: mcp.json.example  mcp.pip.json.example
examples/: chat_with_memory.py
scripts/: generate_demo_video.py  github-repo-setup.sh  verify_mcp_install.sh
skills/cursor-mem/: SKILL.md
tests/: test_cursor_llm.py
