[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cursor-mem"
version = "0.1.0"
description = "AI agent memory layer (mem0-compatible) powered by Cursor SDK"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10,<4.0"
dependencies = [
    "mem0ai>=2.0.0",
    "cursor-sdk>=0.1.0",
    "fastembed>=0.3.1",
    "qdrant-client>=1.12.0",
]

[project.optional-dependencies]
nlp = [
    "spacy>=3.7.0",
]
mcp = [
    "mcp>=1.2.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
cursor-mem-mcp = "cursor_mem.mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["cursor_mem"]
