[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cursor-mem0"
version = "0.1.3"
description = "AI agent memory layer (mem0-compatible) powered by Cursor SDK"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11,<3.14"
authors = [{ name = "cursor-mem contributors" }]
keywords = [
    "cursor",
    "cursor-ide",
    "cursor-sdk",
    "mem0",
    "ai-memory",
    "agent-memory",
    "long-term-memory",
    "persistent-memory",
    "mcp",
    "mcp-server",
    "qdrant",
    "fastembed",
    "semantic-search",
    "vector-search",
    "ai-agents",
    "cross-chat",
    "user-preferences",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mem0ai>=2.0.0",
    "cursor-sdk>=0.1.0",
    # Cap fastembed so future releases cannot pull Python/onnxruntime pins we have not tested.
    "fastembed>=0.5.1,<0.9.0",
    # Intel Mac: onnxruntime stops publishing x86_64 wheels after 1.19.x; fastembed 0.5+ on
    # Python 3.13 needs onnxruntime>1.20, which is unavailable there — pin helps pip fail clearly.
    "onnxruntime>=1.17.0,!=1.20.0,<1.20.0; platform_machine == 'x86_64' and sys_platform == 'darwin'",
    "qdrant-client>=1.12.0",
]

[project.optional-dependencies]
nlp = [
    "spacy>=3.7.0",
]
mcp = [
    "mcp>=1.2.0",
    "python-dotenv>=1.0.0",
]
dev = [
    "pytest>=7.0",
    "build>=1.0",
    "twine>=5.0",
]

[project.scripts]
cursor-mem-mcp = "cursor_mem.mcp_server:main"

[project.urls]
Homepage = "https://github.com/xwqiang/cursor-mem0"
Documentation = "https://github.com/xwqiang/cursor-mem0#readme"
Repository = "https://github.com/xwqiang/cursor-mem0"
Issues = "https://github.com/xwqiang/cursor-mem0/issues"

[tool.hatch.build.targets.wheel]
packages = ["cursor_mem"]

[tool.hatch.build.targets.sdist]
include = [
    "/CHANGELOG.md",
    "/LICENSE",
    "/README.md",
    "/README.zh-CN.md",
    "/docs/demo.gif",
    "/docs/demo.mp4",
    "/docs/mcp.json.example",
    "/docs/mcp.pip.json.example",
    "/mcp.json",
    "/.mcp.json",
    "/.cursor-plugin/plugin.json",
    "/assets/logo.png",
    "/skills",
    "/cursor_mem",
    "/examples",
    "/tests",
]
